:toc: macro
:project-url: https://github.com/sorairolake/qrtool
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.6.2\...v0.7.0[0.7.0] - 2023-07-12

=== Added

* Add QOI as an input format

=== Changed

* Change to support more CSS color formats for foreground and background colors
  ({pull-request-url}/137[#137])
* Change license of documents to CC BY 4.0 ({pull-request-url}/148[#148])
* Change to also use the extension to determine the raster image format
  ({pull-request-url}/149[#149])

== {compare-url}/v0.6.1\...v0.6.2[0.6.2] - 2023-06-12

=== Changed

* Update dependencies

== {compare-url}/v0.6.0\...v0.6.1[0.6.1] - 2023-05-16

=== Changed

* Update dependencies

== {compare-url}/v0.5.1\...v0.6.0[0.6.0] - 2023-04-02

=== Added

* Add OpenEXR as an input format

=== Changed

* Change to use `qrencode` crate
* Bump MSRV to 1.65.0

== {compare-url}/v0.5.0\...v0.5.1[0.5.1] - 2023-01-30

=== Fixed

* Fix invalid link in README
* Fix missing the `lang` attribute in the book

== {compare-url}/v0.4.3\...v0.5.0[0.5.0] - 2023-01-28

=== Changed

* Bump sysexits to v0.4
* Bump MSRV to 1.64.0

=== Fixed

* Fix create a package for Windows in CD

== {compare-url}/v0.4.2\...v0.4.3[0.4.3] - 2022-12-10

=== Fixed

* Fix build man pages in CD

== {compare-url}/v0.4.1\...v0.4.2[0.4.2] - 2022-11-24

=== Changed

* Change error messages to start with lowercase

== {compare-url}/v0.4.0\...v0.4.1[0.4.1] - 2022-11-22

=== Changed

* Bump clap to v4.0

== {compare-url}/v0.3.3\...v0.4.0[0.4.0] - 2022-09-18

=== Changed

* Allow non-UTF-8 paths as arguments

== {compare-url}/v0.3.2\...v0.3.3[0.3.3] - 2022-09-06 [YANKED]

=== Added

* Add the default color to `--foreground` and `--background`
