@@ -27,6 +27,7 @@ exclude = [
 anyhow = "1.0.71"
 clap = { version = "4.3.11", features = ["derive", "wrap_help"] }
 clap_complete = "4.3.2"
+clap_complete_nushell = "4.3.1"
 csscolorparser = "0.6.2"
 image = "0.24.6"
 qrencode = "0.14.0"
