@@ -4,10 +4,13 @@
 // Copyright (C) 2022-2023 Shun Sakai
 //
 
-use std::{io, path::PathBuf};
+use std::{
+    io::{self, Write},
+    path::PathBuf,
+};
 
 use clap::{value_parser, Args, CommandFactory, Parser, Subcommand, ValueEnum, ValueHint};
-use clap_complete::{Generator, Shell};
+use clap_complete::Generator;
 use csscolorparser::Color;
 use image::{ImageError, ImageFormat};
 
@@ -184,7 +187,7 @@ pub struct Decode {
 }
 
 impl Opt {
-    /// Generate shell completion and print it.
+    /// Generates shell completion and print it.
     pub fn print_completion(gen: impl Generator) {
         clap_complete::generate(
             gen,
@@ -192,6 +195,52 @@ impl Opt {
             Self::command().get_name(),
             &mut io::stdout(),
         );
+    }
+}
+
+#[derive(Clone, Debug, ValueEnum)]
+#[value(rename_all = "lower")]
+pub enum Shell {
+    /// Bash.
+    Bash,
+
+    /// Elvish.
+    Elvish,
+
+    /// fish.
+    Fish,
+
+    /// Nushell.
+    Nushell,
+
+    /// PowerShell.
+    PowerShell,
+
+    /// Zsh.
+    Zsh,
+}
+
+impl Generator for Shell {
+    fn file_name(&self, name: &str) -> String {
+        match self {
+            Self::Bash => clap_complete::Shell::Bash.file_name(name),
+            Self::Elvish => clap_complete::Shell::Elvish.file_name(name),
+            Self::Fish => clap_complete::Shell::Fish.file_name(name),
+            Self::Nushell => clap_complete_nushell::Nushell.file_name(name),
+            Self::PowerShell => clap_complete::Shell::PowerShell.file_name(name),
+            Self::Zsh => clap_complete::Shell::Zsh.file_name(name),
+        }
+    }
+
+    fn generate(&self, cmd: &clap::Command, buf: &mut dyn Write) {
+        match self {
+            Self::Bash => clap_complete::Shell::Bash.generate(cmd, buf),
+            Self::Elvish => clap_complete::Shell::Elvish.generate(cmd, buf),
+            Self::Fish => clap_complete::Shell::Fish.generate(cmd, buf),
+            Self::Nushell => clap_complete_nushell::Nushell.generate(cmd, buf),
+            Self::PowerShell => clap_complete::Shell::PowerShell.generate(cmd, buf),
+            Self::Zsh => clap_complete::Shell::Zsh.generate(cmd, buf),
+        }
     }
 }
 
