@@ -12,6 +12,12 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.7.0\...HEAD[Unreleased]
+
+=== Added
+
+* Add feature to generate Nushell completions ({pull-request-url}/151[#151])
+
 == {compare-url}/v0.6.2\...v0.7.0[0.7.0] - 2023-07-12
 
 === Added
